--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  - type: web
+  - type: worker
     name: giveaway-bot
     env: python
     buildCommand: pip install -r requirements.txt
